# Ticket-Reader

./: README.md  pyproject.toml  report.txt
documents/: KB Article Computer turn on issue.txt  KB Article Wifi not connecting.txt
src/final/: crew.py  main.py
src/final/config/: agents.yaml  tasks.yaml
