[project]
name = "final"
version = "0.1.0"
description = "final using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
final = "final.main:run"
run_crew = "final.main:run"
train = "final.main:train"
replay = "final.main:replay"
test = "final.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
